Feb 2022 - 2.1
- Improvement: Changed the map provider to ESRI to be able to get Map legends in English.
- Improvement: Added two buttons to the map to change the zoom level.
- New feature: DX Spots coming from DXCluster can be sent to the map.
- Bugfix: Longitude was not properly calculated from a callsign.

Feb 2022 - 2.0
- Stop the Ukranian war release.
  This KLog release is showing my request to stop the war in Ukraine.
  No other feature of bugfix will be done in this release.

Feb 2022 - 1.9
- New feature: Map showing locators. (Closes #168)
- Bugfix: Mark QSL to be sent is not shown if QSL is sent on right click menu in the search widget. (Closes #387).
- Improvement: Query the radio after leaving manual mode (Closes #416).
- Improvement: Grids are now sorted on Grid stats for satellites. (Closes #424).
- Translations: Catalan (TNX Txema), Italian (TNX IU5HIU), Japanese (TNX JJ1TGT) & Spanish (EA4K).

Jan 2022 - 1.8.7
- Bugfix: Removed the hamlib test from the KLog start that was causing big delays.
- Bugfix: Serial speed was not saved to config file.
- Bugfix: eQSL Uploads problem solved (Closes #406).
- Bugfix: Connection to the radios were not being done properly (Closes #407) (Closes #379).
- Bugfix: SplitCheckBox was checked when coming from Setup (Closes #377).
- Bugfix: Entering a QRZ cleared the DX Gridsquare if it was previously entered (Closes #357).
- Bugfix: Imported QSOs add the default electronic QSL send info if configured.
- Bugfix: DXCC widget shows last Entity status after modifying a QSO (Closes #412).
- Bugfix: Hamlib is now stopped while editing a QSO (Closes #414).
- Bugfix: Hamlib on serial devices works ok. (Closes #355).
- Bugfix: RST is not changed on mode change when editing. (Closes #423).
- New feature: Added a Manual Mode checkbox to disable quickly hamlib & wsjtx integration.
- New feature: Added "Save" and "Cancel" button when editing a recorded QSO.