@@ -30,7 +30,7 @@ CONFIG -=depend_includepath
 #CONFIG += release
 TEMPLATE = app
 
-VERSION = 2.1-RC1
+VERSION = 2.1
 
 DEFINES += APP_VERSION=\\\"$$VERSION\\\"
 
